# pytorch-zerotomastery

./: .gitignore  01_pytorch_workflow.ipynb  02_pytorch_classification.ipynb  03_pytorch_computer_vision.ipynb  04_pytorch_custom_datasets.ipynb  05_pytorch_going_modular.md  06_pytorch_transfer_learning.ipynb  07_pytorch_experiment_tracking.ipynb  08_pytorch_paper_replicating.ipynb  09_pytorch_model_deployment.ipynb  README.md  docs_hooks.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md
docs/javascripts/: immersive.js  mathjax.js
docs/stylesheets/: immersive.css
extras/: pytorch_2_intro.ipynb  pytorch_cheatsheet.ipynb  pytorch_extra_resources.md  pytorch_most_common_errors.ipynb
models/: 01_pytorch_workflow_model_1.pth
