[project]
name = "pytorch-deep-learning"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.26.3",
    "mkdocs-material[imaging]>=9.7.6",
    "mlxtend>=0.25.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda" }]
torchvision = [{ index = "pytorch-cuda" }]